--- a/LifeCareer.htm
+++ b/LifeCareer.htm
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="navbar">
-            <a href="Index.htm" class="Homebtn" style="color: #F0F0F0;">Home</a>
+            <a href="index.htm" class="Homebtn" style="color: #F0F0F0;">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">About Beethoven</button>
                 <div class="contentDropdown">
