--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="English">
     <head>
         <title>Know Auckland</title>
         <meta charset="utf-8">
@@ -41,25 +41,25 @@
             <div class="events">
                 <h1>Explore things to do</h1>
                 <div class="explorecard">
-                    <a href="">
+                    <a href="https://www.aucklandnz.com/explore?category=Arts-Culture">
                         <img src="Website_1_photos/men-walking-on-cross-street.jpg" alt="men walking on cross street">
                     </a>
                     <br>
-                    <a href=""><h4>Experience Auckland's art and culture scene</h4></a>
+                    <a href="https://www.aucklandnz.com/explore?category=Arts-Culture"><h4>Experience Auckland's art and culture scene</h4></a>
                 </div>
                 <div class="explorecard">
-                    <a href="">
+                    <a href="https://www.aucklandnz.com/explore?category=Eat-Drink">
                         <img src="Website_1_photos/crave-cafe-morningside.jpeg" alt="crave cafe, Auckland">
                     </a>
                     <br>
-                    <a href=""><h4>Experience Auckland's dinning scene</h4></a>
+                    <a href="https://www.aucklandnz.com/explore?category=Eat-Drink"><h4>Experience Auckland's dinning scene</h4></a>
                 </div>
                 <div class="explorecard">
-                    <a href="">
+                    <a href="https://www.aucklandnz.com/explore?category=Escape-to-Nature">
                         <img src="Website_1_photos/walks-kitekite-falls.jpeg" alt="kitekite falls, Auckland">
                     </a>
                     <br>
-                    <a href=""><h4 id="Escape">Escape to Nature</h4></a>
+                    <a href="https://www.aucklandnz.com/explore?category=Escape-to-Nature"><h4 id="Escape">Escape to Nature</h4></a>
                 </div>
             </div>
             <div class="History">
@@ -78,14 +78,14 @@
                     establishing the city as the largest urban hub in the country.
                 </h4>
                 <br>
-                <button class="HistoryButton" onclick="document.location='index.htm'">Learn More</button>
+                <button class="HistoryButton" onclick="document.location='History.htm'">Learn More</button>
             </div>
             <div class="navbar">
                 <a href="index.htm">
                     <img src="Website_1_photos/KnowAucklandLogo.png" alt="Know Auckland Logo">
                 </a>
                 <div class="Links">
-                    <h4 style="color: black; font-size: 18pt;">See Also</h4>
+                    <h4 style="color: white; font-size: 18pt;">See Also</h4>
                     <a href="About.htm" class="seealso">About</a>
                     <a href="History.htm" class="seealso">History</a>
                     <a href="Contact.html" class="seealso">Events</a>
