--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="English">
+<html lang="en">
     <head>
         <title>Know Auckland</title>
         <meta charset="utf-8">
