--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="NavBar.css">
         <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="icon" type="image/x-icon" href="Website_1_photos/KnowAucklandLogo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Discover Auckland New Zealand and what it has to offer.">
         <meta name="Keywords" content="About Auckland">
