--- a/About.htm
+++ b/About.htm
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="NavBar.css">
         <link rel="stylesheet" type="text/css" href="about.css">
+        <link rel="icon" type="image/x-icon" href="Website_1_photos/KnowAucklandLogo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Know more about Auckland's culture, arts, and geography. Learn what Auckland has to offer and get to know the Auckland community">
         <meta name="Keywords" content="About Auckland">
