--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a href="About.htm">About</a>
                 <a href="History.htm">History</a>
-                <a href="Contact.html">Events</a>
+                <a href="https://www.aucklandnz.com/">More</a>
             </div>
         </div>
 
@@ -89,7 +89,7 @@
                     <h4 style="color: white; font-size: 18pt;">See Also</h4>
                     <a href="About.htm" class="seealso">About</a>
                     <a href="History.htm" class="seealso">History</a>
-                    <a href="Contact.html" class="seealso">Events</a>
+                    <a href="https://www.aucklandnz.com/" class="seealso">See More</a>
                 </div>
             </div>
         </div>
