--- a/History.htm
+++ b/History.htm
@@ -5,7 +5,6 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="NavBar.css">
         <link rel="stylesheet" type="text/css" href="about.css">
-        <link rel="icon" type="image/x-icon" href="Website_1_photos/KnowAucklandLogo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Know more about Auckland's culture, arts, and geography. Learn what Auckland has to offer and get to know the Auckland community">
         <meta name="Keywords" content="About Auckland">
@@ -24,7 +23,7 @@
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a href="About.htm">About</a>
                 <a href="History.htm">History</a>
-                <a href="Contact.html">Events</a>
+                <a href="index.htm">Home</a>
             </div>
         </div>
 
@@ -59,6 +58,9 @@
                 <h4>
                     During the early 1860s, Auckland served as a base against the Māori King Movement with an influx of Imperial soldiers bolstering local commerce. This military presence coupled with extensive road construction towards Waikato facilitated Pākehā influence expansion from Auckland. The city experienced rapid population growth from 1,500 in 1841 to 3,635 in 1845 and surged to 12,423 by 1864. Similar to other trade-centric cities of that era, growth centered around the port led to issues like overcrowding and pollution. Notably diverse with about half its population being Irish ex-soldiers compared to English settlers predominant in other regions like Wellington or Christchurch; early settlers often benefited from subsidized passage to New Zealand.
                 </h4>
+                <br>
+                <br>
+                <a href="https://nzhistory.govt.nz/keyword/auckland"><u><h4>Visit this website for more</h4></u></a>
             </div>
             <div class="navbar">
                 <a href="index.htm">
@@ -68,7 +70,7 @@
                     <h4 style="color: white; font-size: 18pt;">See Also</h4>
                     <a href="About.htm" class="seealso">About</a>
                     <a href="History.htm" class="seealso">History</a>
-                    <a href="Contact.html" class="seealso">Events</a>
+                    <a href="https://www.aucklandnz.com/" class="seealso">See More</a>
                 </div>
             </div>
         </div>
