--- a/About.htm
+++ b/About.htm
@@ -5,7 +5,6 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="NavBar.css">
         <link rel="stylesheet" type="text/css" href="about.css">
-        <link rel="icon" type="image/x-icon" href="Website_1_photos/KnowAucklandLogo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Know more about Auckland's culture, arts, and geography. Learn what Auckland has to offer and get to know the Auckland community">
         <meta name="Keywords" content="About Auckland">
@@ -24,7 +23,7 @@
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a href="About.htm">About</a>
                 <a href="History.htm">History</a>
-                <a href="Contact.html">Events</a>
+                <a href="index.htm">Home</a>
             </div>
         </div>
 
@@ -94,6 +93,9 @@
                     Architectural marvels such as the Harbour Bridge, Town Hall, Ferry Building, and Sky Tower (the Southern Hemisphere's second-tallest building after Thamrin Nine) adorn its skyline. The city is well-connected through Auckland Airport catering to around 2 million international passengers monthly. 
                     Despite its high cost of living, Auckland ranks among the world's most liveable cities; placing third in Mercer's Quality of Living Survey 2019 and clinching first place in The Economist's Global Liveability Ranking for 2021.
                 </h4>
+                <br>
+                <br>
+                <a href="https://www.aucklandnz.com/city-info/auckland-region-guide"><u><h4>Go here for a region guide</h4></u></a>
             </div>
             <div class="navbar">
                 <a href="index.htm">
@@ -103,7 +105,7 @@
                     <h4 style="color: white; font-size: 18pt;">See Also</h4>
                     <a href="About.htm" class="seealso">About</a>
                     <a href="History.htm" class="seealso">History</a>
-                    <a href="Contact.html" class="seealso">Events</a>
+                    <a href="https://www.aucklandnz.com/" class="seealso">See More</a>
                 </div>
             </div>
         </div>
